--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
+# Visual Studio
 .vs/
+.vscode/
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Bb]in/
+[Oo]bj/
+
+# SQL Server files
+*.mdf
+*.ldf
+
+# Others
+*.db
+*.log
+
