Guardando cambios en .gitignore y staticwebassets.removed.txt

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ bld/
 
 /obj/Debug/net8.0/GestionEstacionamientoRicardo.AssemblyInfoInputs.cache
 /obj/Debug/net8.0/GestionEstacionamientoRicardo.AssemblyInfo.cs
+
+
+# Staging area
+/stage/
+# Build directory
+/build/
+
