--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ bld/
 # Others
 *.db
 *.log
+# Exclude bin and obj directories 
+bin/ 
+obj/
 
 /obj/Debug/net8.0/GestionEstacionamientoRicardo.AssemblyInfoInputs.cache
 /obj/Debug/net8.0/GestionEstacionamientoRicardo.AssemblyInfo.cs
